<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.loodos.fancyedittextsample.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.loodos.fancyedittext.FancyEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:maxLines="1"
                android:singleLine="true" />

            <com.loodos.fancyedittext.FancyEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:singleLine="true"
                app:clearEnabled="true"
                app:clearIcon="@drawable/ic_clear"
                app:dynamicBackgroundEnabled="true"
                app:emojiEnabled="false"
                app:errorBackground="@drawable/shape_rectangle_default_error_yellow"
                app:focusedBackground="@drawable/shape_rectangle_default_focused_purple"
                app:hidePwdIcon="@drawable/ic_visibility_off_black_24dp"
                app:pwdIconEnabled="true"
                app:showPwdIcon="@drawable/ic_visibility_black_24dp"
                app:successBackground="@drawable/shape_rectangle_default_success" />

            <com.loodos.fancyedittext.FancyEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                app:dynamicBackgroundEnabled="true" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
